fixed gap height under header;

--- a/src/app/containers/GovernancePage/pages/index.module.scss
+++ b/src/app/containers/GovernancePage/pages/index.module.scss
@@ -165,6 +165,7 @@
 }
 
 .title {
-  @apply tw-text-black tw-text-center tw-font-rowdies tw-text-xl tw-pt-12 tw-uppercase tw-pb-12 tw-tracking-normal;
+  @apply tw-text-black tw-text-center tw-font-rowdies tw-text-xl tw-uppercase tw-pb-12 tw-tracking-normal;
   line-height: 1.875rem;
+  padding-top: 4.5rem;
 }
